# Block-World-A-star

./: README.md  block_world_problem.py  main.py  pyproject.toml  requirements.txt  test.py
src/: block_world_problem.py
src/heuristics/: bases.py  factory.py
tests/: tests.py
tests/data/: results.json
